<?xml version="1.0" encoding="utf-8"?>
<zz.app.gif2mp4.layouts.YellowStyleFrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/mainlayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingBottom="20dp"
            android:id="@+id/outputlayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btnoutputgif"
                        android:text="@string/str_converttogif"
                        android:background="@drawable/outputdrawable"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btngifreverse"
                        android:text="@string/str_reversegif"
                        android:background="@drawable/outputdrawable"/>


                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btngifjump"
                    android:text="@string/str_gifjump"
                    android:background="@drawable/outputdrawable"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btnoutput"
                        android:text="@string/str_converttomp4"
                        android:background="@drawable/outputdrawable"/>
            </LinearLayout>
            </LinearLayout>
        </FrameLayout>
<android.support.v7.widget.RecyclerView
    android:visibility="visible"
    android:layout_above="@id/outputlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/g2mconfiglistview"
  >


</android.support.v7.widget.RecyclerView>

</RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llselectpicwrapper">

    </LinearLayout>
</zz.app.gif2mp4.layouts.YellowStyleFrameLayout>