<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/framelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cvhintholder"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHint"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:padding="30dp"
            android:textAlignment="center"
            />
    </android.support.v7.widget.CardView>
    <zz.app.gif2mp4.layouts.ShowMp4CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/fivedp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvimageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/fivedp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/flvideowrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/tvimageName"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/tvloadinghint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_loading" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/fivedp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/gif"
                    android:focusable="true" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/btnaudio"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:paddingStart="25dp"
                android:paddingEnd="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/str_audio"
                android:scaleType="centerInside"
                android:src="@drawable/audiooff" />
        </RelativeLayout>

    </zz.app.gif2mp4.layouts.ShowMp4CardView>


</FrameLayout>